--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,1 +1,21 @@
-<p>product-card works!</p>
+<div class="product-card">
+    <img [src]="product.images[0].url" [alt]="product.name" class="product-image" />
+    <div class="product-info">
+      <h3>{{ product.name }}</h3>
+      <p class="description">{{ product.description }}</p>
+      <div class="price-info">
+        <span class="price">Price: {{ product.price }}</span>
+        <span class="tax">Tax: {{ product.taxes }}%</span>
+      </div>
+      <div class="product-details">
+        <p>EAN: {{ product.ean }}</p>
+        <p>UPC: {{ product.upc }}</p>
+      </div>
+      <div class="categories">
+        <span *ngFor="let category of product.categories" class="category-tag">
+          {{ category }}
+        </span>
+      </div>
+    </div>
+  </div>
+  
